syntax = "proto3";

option csharp_namespace = "HomeManagement.API.Protos";

package Listener;

service ListenerService{
	rpc Check (ListenerMessage) returns(EventReply);

	rpc GetRegistrations (RegistrationRequest) returns(RegisterUsers);

	rpc PushNewRegistration (RegistrationSender) returns (EventReply);
}

message ListenerMessage{
	EventType MessageType = 1;
}

enum EventType{
	Registration = 0;
}

message EventReply{
	bool result = 1;
}

message RegistrationRequest{

}

message RegisterUsers{
	repeated string emails = 1;
}

message RegistrationSender{
	EventType MessageType = 1;
	string Email = 2;
}